have front end semi running, about to make changes using ngcart

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<a ui-sref="womenShoes" ng-click="getShoes()">Women's Shoes</a>
 		<p>Men's Shoes</p>
 		<p>Login</p>
-		<a ui-sref="cart">Cart</a>
+		<a ui-sref="cart"><img class="cart" src="./images/cart.png"></a>
 	</header>
 
 
